--- a/src/main/resources/templates/order-confirmation-ua.html
+++ b/src/main/resources/templates/order-confirmation-ua.html
@@ -42,6 +42,13 @@
             <td th:text="${item.price}">Price</td>
             <td th:text="${item.total}">Total</td>
         </tr>
+        <tr th:if="${order.customCandles != null}" th:each="candle : ${order.customCandles}">
+            <td> Особлива свічка</td>
+            <td th:text="${candle.aromaName}">Aroma name</td>
+            <td th:text="${candle.quantity}">Qty</td>
+            <td th:text="${candle.price}">Price</td>
+            <td th:text="${candle.total}">Total</td>
+        </tr>
         <tr>
             <td colspan="4">Total</td>
             <td th:text="${order.total}"></td>
