--- a/src/main/resources/templates/order-confirmation-en.html
+++ b/src/main/resources/templates/order-confirmation-en.html
@@ -80,7 +80,7 @@
             <p th:text="${order.customer.delivery}">Delivery method</p>
         </div>
     </div>
-    <div style="padding: 14px; margin: 10px 0 24px 0" th:if="${order.customer.comment != null}">
+    <div style="padding: 14px; margin: 10px 0 24px 0" th:if="${(order.customer.comment != null) && (order.customer.comment.length() > 0)}">
         <p class="orderTitleStyle">Comment:</p>
         <p th:text="${order.customer.comment}">Comment</p>
     </div>
